refactor Arrays.asList 대신 java9 에 추가된 List.of 를 사용하라