@@ -16,7 +16,7 @@ public class RefereeTest {
         Car seunghun = new Car(500, "최승훈");
         Car pobi = new Car(0, "포비");
 
-        List<Car> cars = Arrays.asList(hyungjunn, seunghun, pobi);
+        List<Car> cars = List.of(hyungjunn, seunghun, pobi);
 
         Referee referee = new Referee(cars);
 
